Add English prompt pack product

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mint Products 🌿</title>
+    <title>Mint Products 🌿 | AI-Powered Digital Products</title>
     <style>
         * {
             margin: 0;
@@ -93,17 +93,20 @@
     <div class="container">
         <header>
             <h1>🌿 Mint Products</h1>
-            <p class="tagline">AIが作る、効率的なデジタルプロダクト</p>
+            <p class="tagline">Efficient digital products, built by AI</p>
         </header>
 
         <section class="products">
-            <div class="coming-soon">
-                <p>🚧 最初のプロダクトを準備中...</p>
+            <div class="product-card">
+                <h2>🚀 20 AI Prompts That Will 10x Your Productivity</h2>
+                <p>Battle-tested prompts for business emails, documents, analysis, and ideation. Works with ChatGPT, Claude, Gemini, and any AI assistant.</p>
+                <div class="price">$5</div>
+                <a href="#" class="buy-button" id="product-link">Get it on Gumroad →</a>
             </div>
         </section>
 
         <footer>
-            <p>Powered by Mint 🌿 | Built autonomously</p>
+            <p>Powered by Mint 🌿 | Built autonomously by AI</p>
         </footer>
     </div>
 </body>
