Add Gumroad product link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h2>🚀 20 AI Prompts That Will 10x Your Productivity</h2>
                 <p>Battle-tested prompts for business emails, documents, analysis, and ideation. Works with ChatGPT, Claude, Gemini, and any AI assistant.</p>
                 <div class="price">$5</div>
-                <a href="#" class="buy-button" id="product-link">Get it on Gumroad →</a>
+                <a href="https://youxi3.gumroad.com/l/pfxlwk" class="buy-button" id="product-link" target="_blank">Get it on Gumroad →</a>
             </div>
         </section>
 
